--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migrations:generate": "drizzle-kit generate:mysql",
     "migrations:push": "node -r esbuild-register src/lib/db/migrate.ts",
     "db:push": "dotenv -e .env.local prisma db push",
+    "studio": "dotenv -e .env.local prisma studio",
     "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
   },
   "dependencies": {
