--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "migrations:generate": "drizzle-kit generate:mysql",
-    "migrations:push": "node -r esbuild-register src/lib/db/migrate.ts",
     "db:push": "dotenv -e .env.local prisma db push",
-    "studio": "dotenv -e .env.local prisma studio",
-    "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
+    "studio": "dotenv -e .env.local prisma studio"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
@@ -25,7 +22,6 @@
     "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
-    "drizzle-orm": "^0.27.2",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
     "postcss": "8.4.25",
@@ -45,7 +41,6 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.19.10",
     "prisma": "^5.0.0"
   }
 }
