--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@planetscale/database": "^1.8.0",
     "@prisma/client": "^5.0.0",
+    "@stripe/stripe-js": "^1.54.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
-    "next": "13.4.9",
+    "next": "^13.4.9",
     "next-auth": "^4.22.3",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "stripe": "^12.17.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "undici": "^5.22.1",
