--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@planetscale/database": "^1.8.0",
     "@prisma/client": "^5.0.0",
     "@stripe/stripe-js": "^1.54.2",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.268.0",
     "next": "^13.4.9",
     "next-auth": "^4.22.3",
     "postcss": "8.4.25",
@@ -34,7 +38,9 @@
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "stripe": "^12.17.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "undici": "^5.22.1",
     "uploadthing": "^5.2.1",
