--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@planetscale/database": "^1.8.0",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@stripe/stripe-js": "^1.54.2",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.1",
