--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "5.1.6",
     "undici": "^5.22.1",
     "uploadthing": "^5.2.1",
+    "valibot": "^0.12.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
