--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.2.6",
     "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
