--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@stripe/stripe-js": "^1.54.2",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
     "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.2.1",
     "lucide-react": "^0.268.0",
-    "next": "^14.1.0",
+    "next": "^14.2.1",
     "next-auth": "^4.24.5",
     "postcss": "8.4.25",
     "react": "^18.2.0",
