--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "db:push": "dotenv -e .env.local prisma db push",
-    "studio": "dotenv -e .env.local prisma studio"
+    "studio": "dotenv -e .env.local prisma studio",
+    "test": "jest",
+    "test:watch": "jest --watchAll --verbose",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
@@ -44,6 +47,9 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "5.1.6",
     "undici": "^5.22.1",
     "uploadthing": "^5.2.1",
@@ -51,8 +57,17 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.12",
+    "cypress": "^13.8.1",
     "dotenv": "^16.3.1",
-    "prisma": "^5.1.1"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.6",
+    "prisma": "^5.1.1",
+    "wait-on": "^7.2.0"
   }
 }
